@@ -1,5 +1,13 @@
 2019-08-12  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	mailbox: Store message-partial ids in the object instead of
+	using GObject-data.
+
+	* libbalsa/mailbox.c (lbm_try_reassemble_idle),
+	(libbalsa_mailbox_try_reassemble):
+
+2019-08-12  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	Drop redundant dynamic cast
 
 	* src/mailbox-node.c (balsa_mailbox_node_finalize):
